# horse-bets

./: .gitignore  Dockerfile  README.md  config.toml  main.py  pyproject.toml  railway.toml
scraper/: __init__.py  browser.py  daily.py  debug_api.py  race_job.py  scheduler.py  storage.py
scraper/templates/: index.html
