[project]
name = "horse-bets"
version = "0.1.0"
description = "Horse Race Scraper"
authors = [
    {name = "Nick Martinovic",email = "n.martinovic@criteo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
