[project]
name = "horse-bets"
version = "0.1.0"
description = "Horse Race Scraper"
authors = [
    {name = "Nick Martinovic",email = "n.martinovic@criteo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.51.0,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.6"
pre-commit = "^4.2.0"

