[tool.poetry]
name        = "horse-bets"
version     = "0.1.0"
description = "Playwright + APScheduler scraper that records Unibet turf races and snapshots three minutes before post-time."
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
packages    = [{ include = "scraper" }]

[tool.poetry.dependencies]
python            = "^3.12"
apscheduler       = "^3.10"
playwright        = "^1.45"
sqlalchemy        = "^2.0"
tomli             = "^2.0"
python-dateutil   = "^2.9"
pandas            = "^2.2"
httpx             = "^0.27"
# Uncomment if you moved to Postgres instead of SQLite
# asyncpg         = "^0.29"
# psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest            = "^8.1"
pytest-asyncio    = "^0.23"
ruff              = "^0.4"
pre-commit        = "^3.7"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
